# Sniffle

./: .gitignore  COPYING  README.md  requirements.txt  rfPacketRx_CC26X2R1_LAUNCHXL_tirtos_gcc.projectspec  setup.sh
.github/workflows/: codeql.yml
fw/: .gitignore  AuxAdvScheduler.c  AuxAdvScheduler.h  Board.h  CC26X2R1_LAUNCHXL.c  CC26X2R1_LAUNCHXL_TIRTOS.lds  CC26X2R1_LAUNCHXL_fxns.c  CommandTask.c  CommandTask.h  DelayHopTrigger.c  DelayHopTrigger.h  DelayStopTrigger.c  DelayStopTrigger.h  PacketTask.c  PacketTask.h  README.md  RFQueue.c  RadioTask.c  RadioTask.h  RadioWrapper.c  RadioWrapper.h  TXQueue.c  TXQueue.h  adv_header_cache.c  adv_header_cache.h  auxChRes.patch  base64.c  base64.h  build_all_platforms.sh  cc13x1_cc26x1_tirtos.lds  cc13x1_cc26x1_tirtos7.lds  cc13x2_cc26x2_tirtos.lds  cc13x2_cc26x2_tirtos7.lds  cc13x2x7_cc26x2x7_tirtos.lds  cc13x2x7_cc26x2x7_tirtos7.lds  cc13x4_cc26x4_tirtos7.lds  ccfg.c  conf_queue.c  conf_queue.h  csa2.c  (+20 more)
fw/CC1352/: Board.h  CC1352R1_LAUNCHXL.c  CC1352R1_LAUNCHXL.h  CC1352R1_LAUNCHXL_TIRTOS.lds  CC1352R1_LAUNCHXL_fxns.c
fw/CC1352P1/: CC1352P1F3.ccxml
fw/CC2652RB/: CC2652RB1F.ccxml  CC2652RB_LAUNCHXL_TIRTOS.lds  CC2652RB_LAUNCHXL_fxns.c
fw/CC26X2/: Board.h  (+4 more)
mobile_extension/: DS3231.py  PCAP.py  button.py  config.py  configuration.py  find_usb_devices.sh  led.py  main.py  processes.py  requirements.txt  rtc.py  setup.sh  sniffle_config.yml  start_stop_sniffle.py  system.py  system_health_monitor.py  system_status.py  usb_drive.py  usb_flash_drive.py
python_cli/: activate.bat  advertiser.py  crc_ble.py  drone.json  drone_spoof.py  hexdump.py  initiator.py  packet_decoder.py  pcap.py  pcap_decoder.py  pyproject.toml  relay_master.py  relay_protocol.py  relay_slave.py  requirements.txt  reset.py  scanner.py  sniff_receiver.py  sniff_receiver_shlex.py  sniffle_extcap.bat  sniffle_extcap.py  sniffle_hw.py  uart_test.py  version_check.py
python_cli/OpenDroneID/: decoder.py  encoder.py  json_parser.py  selftest.py  utils.py
python_cli/OpenDroneID/Messages/: definitions.py  msg_authentication.py  msg_basicid.py  msg_locationvector.py  msg_operatorid.py  msg_selfid.py  msg_system.py
python_cli/sniffle/: __init__.py  channelizer.py  coding_ble.py  constants.py  decoder_state.py  errors.py  hexdump.py  measurements.py  packet_decoder.py  pcap.py  relay_protocol.py  resampler.py  sdr_utils.py  sniffer_state.py  sniffle_hw.py  sniffle_sdr.py  whitening_ble.py
python_cli/sniffle/advdata/: __init__.py  ad_types.py  constants.py  constants_generator.py  decoder.py  msd_apple.py  msd_microsoft.py  yaml.py
python_cli/sniffle/advdata/assigned_numbers/company_identifiers/: company_identifiers.yaml
python_cli/sniffle/advdata/assigned_numbers/core/: ad_types.yaml
python_cli/sniffle/advdata/assigned_numbers/uuids/: service_uuids.yaml
python_cli/tests/: conftest.py  test_setup_validation.py
smartrf_settings/: smartrf_settings.c  smartrf_settings.h
(+20 files in other folders)
