[tool.poetry]
name = "sniffle"
version = "1.9.0"
description = "Sniffer for Bluetooth 5 and 4.x (LE) using TI CC1352/CC26x2 hardware"
authors = ["Sniffle Developers"]
readme = "../README.md"
license = "GPL-2.0-or-later"
homepage = "https://github.com/nccgroup/Sniffle"
repository = "https://github.com/nccgroup/Sniffle"
keywords = ["bluetooth", "sniffer", "ble", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "sniffle"}]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"

[tool.poetry.group.sdr]
optional = true

[tool.poetry.group.sdr.dependencies]
numpy = "^1.24.0"
scipy = "^1.10.0"
# soapysdr = "^0.8.0"  # Note: Install manually with system package manager if needed

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
sniffle = "sniffle.sniffle_hw:main"
sniffle_sdr = "sniffle.sniffle_sdr:main"
scanner = "sniffle.scanner:main"
adv_stats = "sniffle.adv_stats:main"
test = "pytest:main"
tests = "pytest:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=sniffle",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    # "--cov-fail-under=80",  # Uncomment when actual tests are written
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["sniffle"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "pass",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"